# mediassist

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  requirment.txt
db/: chroma.sqlite3
src/: main.py
src/mediassist/api/: main.py  schemas.py
src/mediassist/core/: agents.py  crews.py  tasks.py
src/mediassist/utils/: environment.py  tools.py
