[tool.poetry]
name = "mediassist-ai"
version = "0.1.0"
description = "AI-powered medical assistant for diabetes diagnosis and recommendations."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mediassist", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13" 
crewai= "^0.86.0"
fastapi=">=0.115.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"